2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2006-07-04  Karsten Bräckelmann  <guenther@rudersport.de>

	* org-gnome-mark-all-read.eplug.xml: Using proper header
	capitalization for the menu entry. Fixes bug #318755.

2005-12-25  Funda Wang  <fundawang@linux.net.cn>

	* Makefile.am: Mark this plugin as translatable (bug#301149).

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-12-07  Funda Wang  <fundawang@linux.net.cn>

	* org-gnome-mark-all-read.eplug.in: i18nlized.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* org-gnome-mark-all-read.eplug.in: Use SOEXT.

2005-05-19 Chenthill Palanisamy <pchenthill@novell.com>

	* MakeFile.am:
	* org-gnome-send-options.eplug.in: Plugin file to add
          the Mark all Messages read menu item.
  	* send-options.c: Contains methods to mark messages as read.	
