@@ -1,15 +1,18 @@
 <?xml version="1.0"?>
 <e-plugin-list>
-  <e-plugin id="org.gnome.mail.folder.mark_all_read" 
-   type="shlib" domain="evolution" _name="Mark All Read"
-   location="@PLUGINDIR@/liborg-gnome-mark-all-read@SOEXT@">
-    <_description>Used for marking all the messages under a folder as read</_description>
-    <author name="Chenthill Palanisamy" email="pchenthill@novell.com"/>
-    <hook class="org.gnome.evolution.mail.popup:1.0">
-      <menu id="org.gnome.evolution.mail.foldertree.popup" target="folder">
-        <item type="item" path="10.emc.01" _label="Mark Me_ssages as Read"
-	activate="org_gnome_mark_all_read" enable="folder" visible="folder"/>
-	</menu>
-    </hook>
- </e-plugin>
- </e-plugin-list>
+		<e-plugin
+			id="org.gnome.evolution.mail.folder.mark_all_read"
+			type="shlib"
+			domain="@GETTEXT_PACKAGE@"
+			_name="Mark All Read"
+			location="@PLUGINDIR@/liborg-gnome-mark-all-read@SOEXT@">
+		<author name="Chenthill Palanisamy" email="pchenthill@novell.com"/>
+		<_description>Used for marking all the messages under a folder as read</_description>
+
+		<hook class="org.gnome.evolution.mail.popup:1.0">
+			<menu id="org.gnome.evolution.mail.foldertree.popup" target="folder">
+				<item type="item" path="10.emc.01" icon="stock_mail-open-multiple" _label="Mark Me_ssages as Read" activate="org_gnome_mark_all_read" enable="folder" visible="folder"/>
+			</menu>
+		</hook>
+	</e-plugin>
+</e-plugin-list>
