@@ -1,3 +1,11 @@
+2007-04-02  Sankar P  <psankar@novell.com>
+
+	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>
+
+	* org-gnome-mark-all-read.eplug.xml:
+	Cleanup. 
+	Fixes part of #301149
+
 2007-03-20  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #419524
